--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <h1 class="text-7xl">Be the Penguins of Winter</h1>
+        </div>
+        <div></div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
